--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,17 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
-    android:background="@drawable/zz_df">
+    android:layout_height="320dp"
+    android:background="@drawable/zy_ss">
 
     <ImageView
         android:id="@+id/nav_icon"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="18dp"
-        android:src="@drawable/toolbar_head"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="18dp"
         android:alpha="10"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/toolbar_head"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,12 +21,13 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="18dp"
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="16sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nav_icon" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
