--- a/app/src/main/res/layout/dialog_update.xml
+++ b/app/src/main/res/layout/dialog_update.xml
@@ -34,7 +34,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
             android:background="@null"
-            android:gravity="center"
+            android:gravity="clip_vertical"
             android:lineSpacingExtra="6dp"
             android:text=""
             android:focusable="false"
