--- a/app/src/main/res/drawable/touch_bg.xml
+++ b/app/src/main/res/drawable/touch_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/index_bg_color" android:state_pressed="true"/>
-    <item android:drawable="@color/index_bg_color" android:state_focused="true"/>
+    <item android:drawable="@color/color_cc" android:state_pressed="true"/>
+    <item android:drawable="@color/color_cc" android:state_focused="true"/>
     <item android:drawable="@color/white"/>
 </selector>
