--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,5 +29,6 @@
     <color name="color_default">#fafafa</color>
     <color name="black">#000000</color>
     <color name="color_33">#333333</color>
+    <color name="color_cc">#cccccc</color>
 
 </resources>
