--- a/app/src/main/res/layout/activity_career_detail.xml
+++ b/app/src/main/res/layout/activity_career_detail.xml
@@ -29,7 +29,7 @@
                 android:minHeight="200dp"
                 android:id="@+id/iv_bg"
                 android:src="@drawable/zy_33"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 app:layout_collapseMode="parallax"
                 android:fitsSystemWindows="true"/>
             <android.support.v7.widget.Toolbar
